# bandit-algorithms

./: .gitignore  README.md  hoge.ipynb  main.py  pyproject.toml
conf/: default.yaml  pbm.yaml
src/: config.py  enviroment.py  evaluator.py  policy.py  runner.py  simulation_env.py  type.py  utils.py
src/policy/: contextfree.py  linear.py
src/policy/default/: base.py  contextfree.py  linear.py
src/policy/multiple_play/: base.py  contextfree.py
yaml/: debug.yaml  default.yaml  k_10.yaml  k_100.yaml  k_300.yaml  k_5.yaml  k_50.yaml
